--- a/index.html
+++ b/index.html
@@ -417,6 +417,25 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading18">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag18" aria-expanded="false" aria-controls="vraag18">
+                                Vraag 18: Heb je graag een gebogen scherm?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag18" class="collapse" aria-labelledby="heading18" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>De laatste jaren wordt je vaak rond de oren geslagen met termen zoals "gebogen scherm" en "curved screens". Dit is de afgelopen jaren dan ook een grote hype geweest in de wereld van de beeldschermen. Vroeger had iedereen een gewoon, plat scherm voor zich staan. Nu zie je steeds vaker en vaker beeldschermen die gebogen zijn. Toch is het nog steeds een belangrijke keuze om te overwegen tussen een plat of gebogen scherm. Beide hebben hun plus- en minpunten. Het belangrijkste pluspunt aan een gebogen scherm, is het feit dat wanneer je telkens naar ander punt kijkt, deze punten altijd even ver weg staan van je ogen. Hierdoor zullen je ogen meer rust hebben tijdens het werken (wat tijdens langdurige shifts veel aangenamer is voor het oog om naar te kijken). Ook zal je minder snel met je ogen en hoofd moeten bewegen als je bv. naar de uitersten van het scherm kijkt. Ergonomisch is dit dus meer verantwoord. Het voordeel van platte schermen is dat je hier meerdere van naast elkaar kunt zetten (wat niet bepaald mogelijk is bij gebogen schermen). Hieronder zie je het verschil tussen een plat en gebogen scherm.</p>
+                            <p>Plat scherm: </p>
+                            <img src="images/plat_scherm.jpg" height="50%" width="50%">
+                            <p class="mt-3">Gebogen scherm: </p>
+                            <img src="images/curved_monitor.jpg" height="50%" width="50%">
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
