--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                     </div>
                     <div id="vraag10" class="collapse" aria-labelledby="heading10" data-parent="#accordion">
                         <div class="card-body">
-                            <p>Dit is een open, optionele vraag waar u nog verduidelijking/opmerkingen kwijt kan.</p>
+                            <p>Dit is een open, optionele vraag waar u nog verduidelijking/opmerkingen kwijt kan. Als u een verduidelijking/opmerking wenst te geven over een bepaalde vraag of meerdere vragen, vergeet dan zeker het nummer van de vraag ook niet te vermelden.</p>
                         </div>
                     </div>
                 </div>
@@ -473,6 +473,36 @@
                             <img src="images/kleurendiepte.jpg" height="50%" width="50%">
                             <p class="mt-3">Dit kan ook voorgesteld worden aan de hand van potloden. Een kleinere kleurendiepte betekent dat je een beperkte set hebt aan kleurpotloden. Je hebt bv. 3 soorten groen, 3 soorten rood en 3 soorten geel. Als je een grotere kleurendiepte hebt, zou dit kunnen betekenen dat je meer potloden hebt. Nu heb je misschien 6 verschillende soorten rood, geel of blauw!</p>
                             <img src="images/potloden.jpg" height="50%" width="50%">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header" id="heading21">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag21" aria-expanded="false" aria-controls="vraag21">
+                                Vraag 21: Hebt u nog eventuele suggesties met betrekking tot het beeldscherm?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag21" class="collapse" aria-labelledby="heading21" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Dit is een open, optionele vraag waar u nog eventuele andere suggesties of wensen kunt vermelden.</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading22">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag22" aria-expanded="false" aria-controls="vraag22">
+                                Vraag 22: Hebt u nog andere opmerking met betrekking tot dit onderwerp?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag22" class="collapse" aria-labelledby="heading22" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Dit is een open, optionele vraag waar u nog verduidelijking/opmerkingen kwijt kan. Als u een verduidelijking/opmerking wenst te geven over een bepaalde vraag of meerdere vragen, vergeet dan zeker het nummer van de vraag ook niet te vermelden.</p>
                         </div>
                     </div>
                 </div>
