--- a/index.html
+++ b/index.html
@@ -506,6 +506,21 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading23">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag23" aria-expanded="false" aria-controls="vraag23">
+                                Vraag 23: Vind je het vies om het materiaal (zoals toetsenbord en muis) te gebruiken in de meldkamer?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag23" class="collapse" aria-labelledby="heading23" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Tijd om even een bommetje te laten vallen. Wist je al dat een toetsenbord vuiler is dan een wc-bril? Om het nog veel erger te maken heeft een toetsenbord 400 keer meer bacteriën dan een wc-bril. Dit is wat de universiteit van Arizona heeft onderzocht! Dit is dus allesbehalve proper. Veel van die bacteriën komen ook gewoon van je handen. Nu wordt er momenteel toch veel ontsmet. Toch is dit in deze onzekere tijden omtrent Corona niet fijn om te horen. Het is dus perfect mogelijk dat je dit vies vindt om te gebruiken.</p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
