--- a/index.html
+++ b/index.html
@@ -521,6 +521,21 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading24">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag24" aria-expanded="false" aria-controls="vraag24">
+                                Vraag 24: Wat vind je van het BYOD (Bring Your Own Device) principe?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag24" class="collapse" aria-labelledby="heading24" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Het BYOD principe is de laatste jaren veel gebruikt! In hogescholen is dit een al veel gebruikt principe waarbij studenten hun eigen laptop en spullen meenemen naar de les. Zo gebruikt iedereen zijn eigen spullen. Qua hygiëne is dit een hele stap voorwaarts aangezien je enkel je eigen muis, toetsenbord en hoofdtelefoon gebruikt. Vandaar de vraag of jij hier interesse in hebt! <span class="vet">Natuurlijk zijn we geen onmensen en moet je zelf dit materiaal niet aankopen een meenemen!</span> Het is dan de bedoeling dat dit materiaal ter plekke beschikbaar is. Wanneer je dan aankomt op je shift kan je bv. je materiaal uit de kast nemen en aansluiten op de computer. Enkel jij raakt dan dit materiaal aan. Iedereen zou dan ook hetzelfde materiaal krijgen! Ook geen paniek als je niet direct weet hoe je dit materiaal aansluit. Er staan altijd mensen klaar om te helpen!</p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
