--- a/index.html
+++ b/index.html
@@ -536,6 +536,25 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading25">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag25" aria-expanded="false" aria-controls="vraag25">
+                                Vraag 25: Heb je liever een qwerty of een azerty toetsenbord?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag25" class="collapse" aria-labelledby="heading25" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Een wattes toetsenbord? Ik kan goed begrijpen dat je momenteel toch eens goed door je haar moet krabben bij het horen van die nonsens. Toch zijn dit bekende termen binnen de IT wereld. Het gaat hier over de indeling van je toetsenbord. Als je linksboven kijkt naar de eerste 6 letters zie je of A Z E R T Y of Q W E R T Y. De kans is groot dat je azerty ziet. Dit is namelijk de indeling die gemaakt wordt op Belgische of Franse toetsenborden. Als je een Amerikaans toetsenbord hebt, gebruik je qwerty. Deze vraag is vooral gericht naar gemak. De layout van het toetsenbord zal bij beide versies dan ook wat verschillen.</p>
+                            <p>Mijn azerty toetsenbord: </p>
+                            <img src="images/azerty.jpg" height="50%" width="50%">
+                            <p class="mt-3">Een qwerty toetsenbord: </p>
+                            <img src="images/qwerty.jpg">
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
