--- a/index.html
+++ b/index.html
@@ -555,6 +555,25 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading26">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag26" aria-expanded="false" aria-controls="vraag26">
+                                Vraag 26: Heb je graag vlakke toetsen?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag26" class="collapse" aria-labelledby="heading26" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Toetsenborden komen in alle vormen en maten. Zo heb je toetsenborden waarbij de toetsen hard uit het toetsenbord komen en toetsenborden waarbij de toetsen redelijk vlak en plat zijn. Platte toetsen betekenen dus dat de toetsen voornamelijk laag zullen liggen en niet uit het toetsenbord komen. Je handen komen lager te liggen en kans op RSI wordt hierdoor verlaagd. Dit is een aandoening waarbij je spierpijn en dergelijke krijgt van repetitieve taken uit te voeren. Ook zullen de toetsen veel minder lawaai maken als je ze aanslaat! Dit is ook positief voor een stille omgeving dus!</p>
+                            <p>Platte toetsen: </p>
+                            <img src="images/plat_toetsenbord.jpg" height="50%" width="50%">
+                            <p class="mt-3">Hoge toetsen: </p>
+                            <img src="images/hoge_toetsen.jpg" height="50%" width="50%">
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
