--- a/index.html
+++ b/index.html
@@ -574,6 +574,21 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading27">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag27" aria-expanded="false" aria-controls="vraag27">
+                                Vraag 27: Is het belangrijk een morsbestendig toetsenbord te hebben?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag27" class="collapse" aria-labelledby="heading27" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Een morsbestendig toetsenbord kan bv. tegen een omgestoten glas water. Stel je voor dat je per ongeluk je glas of flesje water omstoot, zal je toetsenbord niet vernield zijn. Het is natuurlijk niet de bedoeling om je toetsenbord mee te nemen als je gaat zwemmen, want dit zal het niet overleven. Er kan ook gekeken worden naar een bekerhouder voor op de bureau zelf!</p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
