--- a/index.html
+++ b/index.html
@@ -589,6 +589,22 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading28">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag28" aria-expanded="false" aria-controls="vraag28">
+                                Vraag 28: Zou je graag een mechanisch toetsenbord willen?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag28" class="collapse" aria-labelledby="heading28" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>We hebben al gezien dat er veel verschillen zijn in de wereld der toetsenborden. Deze vraag heeft dan ook betrekking tot het soort toetsen. Je hebt 2 soorten hier: een membraan toetsenbord of een mechanisch toetsenbord. Een membraan toetsenbord is wellicht het toetsenbord dat u zelf gebruikt! Dit heeft de gewone toetsen en doet eigenlijk helemaal niets speciaal. Het wordt pas speciaal wanneer we kijken naar het mechanische toetsenbord! Typerend aan dit toetsenbord is het harde, klakkende geluid dat een toets maakt wanneer het ingedrukt wordt! Wel... Waarom zou je in hemelsnaam dan kiezen voor dit mechanische toetsenbord? Goede vraag! Bij een mechanisch toetsenbord hoef je de toets niet volledig in te drukken voor deze geregistreerd wordt! Dit heeft met andere woorden een lichtere toetsaanslag dan een membraan toetsenbord. Ergonomisch is dit dus een groot voordeel aangezien dit ook lichamelijke klachten zou kunnen voorkomen. Toch is dit verschil ook niet zo bijster groot! Een mechanisch toetsenbord zal ook bij elke toetsaanslag een klakkend geluid maken. Hieronder een voorbeeld. Vergeet zeker niet te luisteren met geluid op!</p>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/sbiCLHJgj1U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
