--- a/index.html
+++ b/index.html
@@ -605,6 +605,27 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading29">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag29" aria-expanded="false" aria-controls="vraag29">
+                                Vraag 29: Zou je graag een mechanisch toetsenbord willen?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag29" class="collapse" aria-labelledby="heading29" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Ik moet natuurlijk niet vertellen dat het werk van een dispatcher ooit stopt. We weten allemaal goed dat ook tijdens de nacht mensen paraat staan! Hierdoor is het interessant om te kijken naar de optie voor een verlicht toetsenbord. Velen beschikken niet over de mogelijkheid om blind te kunnen typen! En zelfs dan is dit nog niet ideaal om in de donkere of in het schemerlicht de toetsen te zoeken. Een oplossing hiervoor is het verlicht toetsenbord! Met een klik op een knop (of een toetsencombinatie) zou u op dit soort toetsenbord het licht kunnen aandoen. Ook hier zijn weer verschillende opties die gaan van alle kleuren tot de regenboog tot een enkele kleur voor het hele toetsenbord. </p>
+                            <p>Voorbeeld van een toetsenbord dat een andere kleur per toets kan hebben: </p>
+                            <img src="images/gekleurde_toetsen.jpg" height="50%" width="50%">
+                            <p class="mt-3">Een video van mijn toetsenbord dat slechts 1 kleur heeft: </p>
+                            <video width="25%" height="25%" controls>
+                                <source src="videos/gekleurd_toetsenbord.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
