--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                     <div class="card-header" id="heading32">
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag32" aria-expanded="false" aria-controls="vraag32">
-                                Vraag 31: Ben je links- of rechtshandig?
+                                Vraag 32: Ben je links- of rechtshandig?
                             </button>
                         </h5>
                     </div>
@@ -674,6 +674,22 @@
                             <img src="images/muis_links.jpg" height="15%" width="15%">
                             <p class="mt-3">Muis voor beide handen: </p>
                             <img src="images/muis_links_rechts.jpg" height="25%" width="25%">
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading33">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag33" aria-expanded="false" aria-controls="vraag33">
+                                Vraag 33: Heb je nood aan een muismat?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag33" class="collapse" aria-labelledby="heading33" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Vele mensen verkiezen een muismat onder hun muis. De reden waarom is dat hun muis hierdoor veel nauwkeuriger zal gaan werken daardoor! Zonder muismat kan de muis soms haperiger overkomen op het scherm. Muismatten heb je ook in alle vormen en maten. Je hebt een muismat waar enkel je muis opkan, maar je hebt ook muismatten waar je ook je toetsenbord bij kunt opplaatsen. Dit zorgt ervoor dat je toetsenbord vast staat op je bureau en niet kan verschuiven wanneer je polsen tegen het toetsenbord leunen. Hieronder enkele voorbeelden van muismatten met ook een foto van mijn eigen muismat: </p>
+                            <img src="images/muismat%20enkel.jpg" height="50%" width="50%">
                         </div>
                     </div>
                 </div>
