--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="col-sm-4 offset-md-1 py-4">
                         <h4 class="text-white">Contact</h4>
                         <ul class="list-unstyled">
-                            <li><a href="mailto:r0613973@student.thomasmore.be" class="text-white">Stuur me een mailtje</a></li>
+                            <li><a href="mailto:r0613973@student.thomasmore.be" class="text-white">Klik hier om me een mailtje te sturen</a></li>
                         </ul>
                     </div>
                 </div>
