--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                     <div class="card-header" id="heading29">
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag29" aria-expanded="false" aria-controls="vraag29">
-                                Vraag 29: Zou je graag een mechanisch toetsenbord willen?
+                                Vraag 29: Heb je graag een verlicht toetsenbord?
                             </button>
                         </h5>
                     </div>
