--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                     <div class="card-header" id="heading34">
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag34" aria-expanded="false" aria-controls="vraag34">
-                                Vraag 33: Heb je graag programmeerbare knoppen?
+                                Vraag 34: Heb je graag programmeerbare knoppen?
                             </button>
                         </h5>
                     </div>
@@ -706,6 +706,21 @@
                         <div class="card-body">
                             <p>Heel wat jaren geleden was een muis relatief simpel. Je had een linkermuisknop, een rechtermuisknop en een wieltje in het midden om te scrollen. De laatste jaren krijg je van die hypermoderne muizen die rechtstreeks uit een science fiction film kunnen komen. Overal lijken nu knoppen te staan op de muis alsof ze als paddenstoelen uit de grond zijn geschoten. Het kan zelfs zo zijn dat je een muis zelf kunt gaan vertellen wat een bepaalde knop moet gaan doen! Zo kun je bv. zeggen dat een bepaalde knop aan de zijkant dient om terug naar een vorig tabblad te springen. Dit is een voorbeeld van zo'n programmeerbare muis. Aan de zijkant zie je een vijftal knoppen die je zelf naar harten lust kunt indelen!</p>
                             <img src="images/muis_programmeerbaar.jpg" height="30%" width="30%">
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading35">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag35" aria-expanded="false" aria-controls="vraag35">
+                                Vraag 35: Heb je graag programmeerbare knoppen?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag35" class="collapse" aria-labelledby="heading35" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Zoals je bij de vorige vraag al kon lezen zijn muizen de laatste jaren zeer technologisch geavanceerd geworden. Een van deze zotte, nieuwe toevoegingen is de optie om de snelheid van de muis te veranderen. Aan de zijkant van de muis staan 3 knopjes waarmee je op een snelle en makkelijke manier de snelheid van de muis kunt veranderen. Je hebt een knop om de snelheid te verhogen, te verlagen en een resetknop waarmee deze terug naar de standaard snelheid gaat. In onderstaand voorbeeld zie je mijn eigen muis waarbij je de snelheid kunt aanpassen: </p>
                         </div>
                     </div>
                 </div>
