--- a/index.html
+++ b/index.html
@@ -714,13 +714,30 @@
                     <div class="card-header" id="heading35">
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag35" aria-expanded="false" aria-controls="vraag35">
-                                Vraag 35: Heb je graag programmeerbare knoppen?
+                                Vraag 35: Heb je graag een knop op de muis om de snelheid van de cursor aan te passen?
                             </button>
                         </h5>
                     </div>
                     <div id="vraag35" class="collapse" aria-labelledby="heading35" data-parent="#accordion">
                         <div class="card-body">
                             <p>Zoals je bij de vorige vraag al kon lezen zijn muizen de laatste jaren zeer technologisch geavanceerd geworden. Een van deze zotte, nieuwe toevoegingen is de optie om de snelheid van de muis te veranderen. Aan de zijkant van de muis staan 3 knopjes waarmee je op een snelle en makkelijke manier de snelheid van de muis kunt veranderen. Je hebt een knop om de snelheid te verhogen, te verlagen en een resetknop waarmee deze terug naar de standaard snelheid gaat. In onderstaand voorbeeld zie je mijn eigen muis waarbij je de snelheid kunt aanpassen: </p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading36">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag36" aria-expanded="false" aria-controls="vraag36">
+                                Vraag 36: Heb je graag een muis met verlichting?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag36" class="collapse" aria-labelledby="heading36" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Deze vraag sluit aan bij vraag 29 omtrent het verlichte toetsenbord. Ook muizen hebben de optie om een lichtbron te gebruiken. Dit zal niet zo licht zijn als bij een toetsenbord. Dit kan weer allerlei soorten en vormen aannemen. Dit gaat van lichten aan de zijkant tot een enkel lichtje bovenop de muis. Sommigen geven alle kleuren van de regenboog en anderen geven dan weer slechts 1 kleur weer. Dit heeft vooral een mooi, estethisch effect. Hieronder 3 voorbeelden van hoe dit eruit ziet: </p>
+                            <img src="images/verlichte_muis.jpg" height="50%" width="50%">
+                            <p class="mt-3"><img src="images/logitech_muis.jpg" height="15%" width="15%"></p>
                         </div>
                     </div>
                 </div>
