--- a/index.html
+++ b/index.html
@@ -741,6 +741,22 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading37">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag37" aria-expanded="false" aria-controls="vraag37">
+                                Vraag 37: Wil je graag een stille muis?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag37" class="collapse" aria-labelledby="heading37" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Ken je dat gevoel? Je bent rustig aan het werk, maar in de verte hoor je dat irritante geluid. Sommigen vinden het nog irritanter dan het geluid van een mug in de nacht. Juist! Iemand zit te klikken op de muis alsof zijn leven ervan af hangt. Speciaal hiervoor zijn stille muizen ontworpen. Wanneer je op de knopjes duwt, zul je dus geen klikkend geluid meer horen! Hier een video om dit aan te tonen: </p>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/e2e4_EZtIhU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
