--- a/index.html
+++ b/index.html
@@ -757,6 +757,31 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading38">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag38" aria-expanded="false" aria-controls="vraag38">
+                                Vraag 38: Welk type muis verkies je? (kijk website vraag 38)
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag38" class="collapse" aria-labelledby="heading38" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Muizen komen in alle soorten en vormen voor. Tegenwoordig heb je 3 grote verschillen qua uiterlijk. Elk hebben ze dan weer hun eigen karaktertrekken!</p>
+                            <p class="vet">Standaard muis: </p>
+                            <img src="images/standaard_muis.jpg" height="50%" width="50%">
+                            <p class="mt-3">Dit is de standaard en klassieke muis die iedereen wel kent. Deze heeft de linker- en rechtermuisknop, een scrollwieltje en kan eventueel ook nog extra knoppen aan de zijkant bevatten.</p>
+                            <p class="vet">Verticale muis: </p>
+                            <img src="images/verticale_muis.jpg" height="50%" width="50%">
+                            <p class="mt-3">Op het eerste zicht lijkt dit op een wezen waar Ellen Ripley tegen vecht in de film "Alien". Toch is dit een gewone computermuis die voornamelijk gericht is op ergonomisch gebruik. De knoppen die normaal gezien bovenaan de muis staan, bevinden zich nu aan de zijkant. Op deze manier hou je de muis volledig anders vast! Toch is dit een type muis dat bij velen onbekend is! Vandaar onderstaande video:</p>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Cb6v1t1ubf4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <p class="vet">Touchpad</p>
+                            <img src="images/touchpad.jpg" height="50%" width="50%">
+                            <p class="mt-3">Ook dit is weer een bizarre muis. Touchpad muizen bedien je door middel van aanrakingen. Deze muizen hebben dan ook geen knoppen en hoef je niet fysiek te verplaatsen zoals je met een ander type muis wel moet doen. Toch kan dit na verloop van tijd vervelend gaan voelen. Het is alsof je de muis zou gebruiken van een laptop!</p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
