--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                     </div>
                     <div id="vraag31" class="collapse" aria-labelledby="heading31" data-parent="#accordion">
                         <div class="card-body">
-                            <p>Dit is een open, optionele vraag waar u nog eventuele andere suggesties of wensen kunt vermelden.</p>
+                            <p>Dit is een open, optionele vraag waar u nog verduidelijking/opmerkingen kwijt kan. Als u een verduidelijking/opmerking wenst te geven over een bepaalde vraag of meerdere vragen, vergeet dan zeker het nummer van de vraag ook niet te vermelden.</p>
                         </div>
                     </div>
                 </div>
@@ -689,7 +689,8 @@
                     <div id="vraag33" class="collapse" aria-labelledby="heading33" data-parent="#accordion">
                         <div class="card-body">
                             <p>Vele mensen verkiezen een muismat onder hun muis. De reden waarom is dat hun muis hierdoor veel nauwkeuriger zal gaan werken daardoor! Zonder muismat kan de muis soms haperiger overkomen op het scherm. Muismatten heb je ook in alle vormen en maten. Je hebt een muismat waar enkel je muis opkan, maar je hebt ook muismatten waar je ook je toetsenbord bij kunt opplaatsen. Dit zorgt ervoor dat je toetsenbord vast staat op je bureau en niet kan verschuiven wanneer je polsen tegen het toetsenbord leunen. Hieronder enkele voorbeelden van muismatten met ook een foto van mijn eigen muismat: </p>
-                            <img src="images/muismat%20enkel.jpg" height="50%" width="50%">
+                            <p><img src="images/muismat%20enkel.jpg" height="50%" width="50%"></p>
+                            <p><img src="images/eigen_muismat.jpg" height="50%" width="50%"></p>
                         </div>
                     </div>
                 </div>
@@ -779,6 +780,36 @@
                             <p class="vet">Touchpad</p>
                             <img src="images/touchpad.jpg" height="50%" width="50%">
                             <p class="mt-3">Ook dit is weer een bizarre muis. Touchpad muizen bedien je door middel van aanrakingen. Deze muizen hebben dan ook geen knoppen en hoef je niet fysiek te verplaatsen zoals je met een ander type muis wel moet doen. Toch kan dit na verloop van tijd vervelend gaan voelen. Het is alsof je de muis zou gebruiken van een laptop!</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading39">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag39" aria-expanded="false" aria-controls="vraag39">
+                                Vraag 39: Hebt u nog eventuele suggesties met betrekking tot de muis?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag39" class="collapse" aria-labelledby="heading39" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Dit is een open, optionele vraag waar u nog eventuele andere suggesties of wensen kunt vermelden.</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading40">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag40" aria-expanded="false" aria-controls="vraag40">
+                                Vraag 40: Hebt u nog eventuele suggesties met betrekking tot de muis?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag40" class="collapse" aria-labelledby="heading40" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Dit is een open, optionele vraag waar u nog verduidelijking/opmerkingen kwijt kan. Als u een verduidelijking/opmerking wenst te geven over een bepaalde vraag of meerdere vragen, vergeet dan zeker het nummer van de vraag ook niet te vermelden.</p>
                         </div>
                     </div>
                 </div>
