--- a/index.html
+++ b/index.html
@@ -813,6 +813,37 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading41">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag41" aria-expanded="false" aria-controls="vraag41">
+                                Vraag 41: Heb je graag de mogelijkheid om een gesprek op te nemen?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag41" class="collapse" aria-labelledby="heading41" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Sommige hoofdtelefoons hebben knopjes op de bedrading of aan de zijkant om een gesprek mee op te nemen of op te hangen. Zo werk je snel en makkelijk.</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading42">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag42" aria-expanded="false" aria-controls="vraag42">
+                                Vraag 42: Vind je ruisonderdrukking belangrijk?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag42" class="collapse" aria-labelledby="heading42" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Heb je dit ooit al eens meegemaakt? Je belt bv. naar iemand die je goed kent en op de achtergrond hoor je allerlei zaken zoals een kind dat het huis afbreekt of allerlei potten en pannen die ergens af vallen. Als je vriend/vriendin ruisonderdrukking had opstaan, zou je hier veel minder last van gehad hebben! Het geluid komt dan veel helderder binnen. Ook zou je die lastige kleuter niet of niet zo hard meer horen. Mensen aan de andere kant van de lijn horen je dus veel beter!</p>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/0LZdaLenzdI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
