--- a/index.html
+++ b/index.html
@@ -844,6 +844,22 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading43">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag43" aria-expanded="false" aria-controls="vraag43">
+                                Vraag 43: Heb je graag een inklapbare microfoon?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag43" class="collapse" aria-labelledby="heading43" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Hoofdtelefoons hebben vaak een ingebouwde microfoon. Deze bevindt zich dan aan de zijkant van een van de oorschelpen. Deze microfoon kan of vaststaan of je kan deze in- en uitklappen. In het eerste geval zal je dus altijd een microfoon naar voor hebben staan. In het 2e geval (wanneer je dus een inklapbare hebt), kun je deze even inklappen wanneer je niet aan het praten bent. Zo kun je bv. een slokje drinken nemen zonder dat er een microfoon lastig doet langs je mond!</p>
+                            <p class="vet">HIER FILMPJE EIGEN HEADSET</p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
