--- a/index.html
+++ b/index.html
@@ -860,6 +860,30 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading44">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag44" aria-expanded="false" aria-controls="vraag44">
+                                Vraag 44: Welk type oorkussen zou je graag willen?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag44" class="collapse" aria-labelledby="heading44" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Als je een hoofdtelefoon wil aanschaffen, kun je tussen verschillende oorkussens kiezen. Dit is het onderdeel van de hoofdtelefoon dat op je oren rust! Hier heb je dus verschillende mogelijkheden die elk hun voor- en nadelen hebben!</p>
+                            <p class="vet">Op het oor: </p>
+                            <img src="images/on_ear.jpeg" height="35%" width="35%">
+                            <p class="mt-3">Dit soort van hoofdtelefoon zet je gewoon op het hoofd, maar de oorkussens zullen zich niet volledig over het oor sluiten. Hierdoor zal deze vooral op het oor rusten! Dit soort van hooftelefoon zal compacter zijn dan het "op het oor" model! Een nadeel is dat dit de minst comfortabele hoofdtelefoon zal zijn!</p>
+                            <p class="vet">Over het oor: </p>
+                            <img src="images/over_ear.jpg" height="35%" width="35%">
+                            <p class="mt-3">Dit soort van hoofdtelefoon zet je ook gewoon op het hoofd, maar de oorkussens zullen zich volledig over het oor gaan plaatsen. Hierdoor zit je oor volledig in het oorkussen. Het voordeel is dat deze meer comfortabel zit en dat je meer afgescheiden zit van achtergrondlawaai. Een nadeel is wel dat deze soms iets zwaarder kunnen zijn dan de andere types van hoofdtelefoon!</p>
+                            <p class="vet">In het oor: </p>
+                            <img src="images/in_ear.jpg" height="35%" width="35%">
+                            <p class="mt-3">Dit soort van hoofdtelefoon zet je niet meer op het hoofd, maar plaats je in de oren! In de volksmond worden die dan ook "de oortjes" genoemd! Het voordeel hiervan is dat je bijna niet meer van de buitenwereld zult horen. De nadelen zijn dat de microfoon hiervan in povere conditie is en dat deze op langere termijn gehoorschade kan geven!</p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
