--- a/index.html
+++ b/index.html
@@ -881,6 +881,34 @@
                             <p class="vet">In het oor: </p>
                             <img src="images/in_ear.jpg" height="35%" width="35%">
                             <p class="mt-3">Dit soort van hoofdtelefoon zet je niet meer op het hoofd, maar plaats je in de oren! In de volksmond worden die dan ook "de oortjes" genoemd! Het voordeel hiervan is dat je bijna niet meer van de buitenwereld zult horen. De nadelen zijn dat de microfoon hiervan in povere conditie is en dat deze op langere termijn gehoorschade kan geven!</p>
+                            <p><img src="images/over_on_in.jpg" width="50%" height="50%"></p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading45">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag45" aria-expanded="false" aria-controls="vraag45">
+                                Vraag 45: Welke draagwijze verkies je bij een hoofdtelefoon?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag45" class="collapse" aria-labelledby="heading45" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Een hoofdtelefoon kun je op heel wat verschillende manieren gaan dragen! Hierbij is het voornamelijk belangrijk om te gaan kijken naar wat comfortabel lijkt te zijn voor lange duur! Er zijn dus 4 grote opties beschikbaar!</p>
+                            <p class="vet">Achter het hoofd: </p>
+                            <img src="images/achter_hoofd.jpg" height="50%" width="50%">
+                            <p class="mt-3">Dit soort van hoofdtelefoon plaats je met een band in je nek. Hierdoor zal deze niet op je hoofd rusten! Deze zijn uitermate geschikt voor fotogenieke mensen die plannen nog enkele foto's op instagram te plaatsen zonder dat hun haar in de war zit.</p>
+                            <p class="vet">Over het hoofd: </p>
+                            <img src="images/over_ear.jpg" width="50%" height="50%">
+                            <p class="mt-3">Dit is de klassieke hoofdtelefoon die je gewoon op je hoofd plaatst. Niets meer, niets minder! Vaak zal dit ook de meest comfortabele hoofdtelefoon zijn, aangezien deze mooi blijft zitten op het hoofd.</p>
+                            <p class="vet">Achter het oor: </p>
+                            <img src="images/achter_oor.jpg" height="50%" width="50%">
+                            <p class="mt-3">Deze hoofdtelefoon draag je door deze achter het oor te bevestigen met een haakje. Hier zie je dus ook dat je maar 1 oorkussen hebt. Je hoort dus met andere woorden het gesprek maar in 1 oor. Toch is deze het meest geschikt als je ook onderling moet overleggen met andere collega's tussen de gesprekken door. Deze zal ook minder comfortabel zitten.</p>
+                            <p class="vet">In het oor: </p>
+                            <img src="images/in_het_oor.jpg" height="50%" width="50%">
+                            <p class="mt-3">Dit soort van hoofdtelefoon plaats je in het oor. Je hebt dus geen band meer aan de hoofdtelefoon die je om het hoofd plaats. Deze oortjes hebben in deze situatie meer nadelen dan voordelen. Ze zitten niet goed voor lange duur en kunnen dan ook schadelijk zijn voor het gehoor. Toch heb ik deze in de lijst erbij gezet om niemand te benadelen!</p>
                         </div>
                     </div>
                 </div>
