--- a/index.html
+++ b/index.html
@@ -912,6 +912,27 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading46">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag46" aria-expanded="false" aria-controls="vraag46">
+                                Vraag 46: Hoeveel oorschelpen heb je graag?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag46" class="collapse" aria-labelledby="heading46" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>De oorschelpen van de hoofdtelefoon zijn de zijkant waar het geluid uitkomt! Deze kun je dan over, in of op het oor plaatsen. Bij een hoofdtelefoon kun je dan kiezen tussen 1 of 2 oorschelpen.</p>
+                            <p class="vet">1 oorschelp: </p>
+                            <img src="images/1_oorschelp.jpg" height="50%" width="50%">
+                            <p class="mt-3">Hier heb je dus slechts 1 oorschelp ter beschikking! Zo hoor je het geluid enkel in 1 oor, terwijl je andere oor vrij is voor andere geluiden op te vangen.</p>
+                            <p class="vet">2 oorschelpen: </p>
+                            <img src="images/2_oorschelpen.jpg" height="50%" width="50%">
+                            <p class="mt-3">Bij dit type van hoofdtelefoon zitten beide oren in de oorschelpen. Hierbij zal je dus veel minder last ondervinden van omgevingsgeluiden, aangezien beide oren bedekt zijn door de hoofdtelefoon.</p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
