--- a/index.html
+++ b/index.html
@@ -722,6 +722,9 @@
                     <div id="vraag35" class="collapse" aria-labelledby="heading35" data-parent="#accordion">
                         <div class="card-body">
                             <p>Zoals je bij de vorige vraag al kon lezen zijn muizen de laatste jaren zeer technologisch geavanceerd geworden. Een van deze zotte, nieuwe toevoegingen is de optie om de snelheid van de muis te veranderen. Aan de zijkant van de muis staan 3 knopjes waarmee je op een snelle en makkelijke manier de snelheid van de muis kunt veranderen. Je hebt een knop om de snelheid te verhogen, te verlagen en een resetknop waarmee deze terug naar de standaard snelheid gaat. In onderstaand voorbeeld zie je mijn eigen muis waarbij je de snelheid kunt aanpassen: </p>
+                            <video width="25%" height="25%" controls>
+                                <source src="videos/eigen_muis_demo.mp4" type="video/mp4">
+                            </video>
                         </div>
                     </div>
                 </div>
@@ -803,7 +806,7 @@
                     <div class="card-header" id="heading40">
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag40" aria-expanded="false" aria-controls="vraag40">
-                                Vraag 40: Hebt u nog eventuele suggesties met betrekking tot de muis?
+                                Vraag 40: Hebt u nog andere opmerkingen met betrekking tot dit onderwerp?
                             </button>
                         </h5>
                     </div>
@@ -856,7 +859,9 @@
                     <div id="vraag43" class="collapse" aria-labelledby="heading43" data-parent="#accordion">
                         <div class="card-body">
                             <p>Hoofdtelefoons hebben vaak een ingebouwde microfoon. Deze bevindt zich dan aan de zijkant van een van de oorschelpen. Deze microfoon kan of vaststaan of je kan deze in- en uitklappen. In het eerste geval zal je dus altijd een microfoon naar voor hebben staan. In het 2e geval (wanneer je dus een inklapbare hebt), kun je deze even inklappen wanneer je niet aan het praten bent. Zo kun je bv. een slokje drinken nemen zonder dat er een microfoon lastig doet langs je mond!</p>
-                            <p class="vet">HIER FILMPJE EIGEN HEADSET</p>
+                            <video width="25%" height="25%" controls>
+                                <source src="videos/eigen_headset_demo.mp4" type="video/mp4">
+                            </video>
                         </div>
                     </div>
                 </div>
@@ -930,6 +935,36 @@
                             <p class="vet">2 oorschelpen: </p>
                             <img src="images/2_oorschelpen.jpg" height="50%" width="50%">
                             <p class="mt-3">Bij dit type van hoofdtelefoon zitten beide oren in de oorschelpen. Hierbij zal je dus veel minder last ondervinden van omgevingsgeluiden, aangezien beide oren bedekt zijn door de hoofdtelefoon.</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading47">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag47" aria-expanded="false" aria-controls="vraag47">
+                                Vraag 47: Hebt u nog eventuele suggesties met betrekking tot de hoofdtelefoon?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag47" class="collapse" aria-labelledby="heading47" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Dit is een open, optionele vraag waar u nog eventuele andere suggesties of wensen kunt vermelden.</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading48">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag48" aria-expanded="false" aria-controls="vraag48">
+                                Vraag 48: Hebt u nog eventuele suggesties met betrekking tot dit onderwerp?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag48" class="collapse" aria-labelledby="heading48" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Dit is een open, optionele vraag waar u nog verduidelijking/opmerkingen kwijt kan. Als u een verduidelijking/opmerking wenst te geven over een bepaalde vraag of meerdere vragen, vergeet dan zeker het nummer van de vraag ook niet te vermelden.</p>
                         </div>
                     </div>
                 </div>
