--- a/index.html
+++ b/index.html
@@ -968,6 +968,37 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading49">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag49" aria-expanded="false" aria-controls="vraag49">
+                                Vraag 49: Ik zou graag soms even willen rechtstaan terwijl ik aan het werken ben!
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag49" class="collapse" aria-labelledby="heading49" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Als dispatcher heb je een zware job! Zeker qua fysiek kan dit zijn tol eisen op het lichaam. Het is een job waarbij je bijna altijd op een stoel zit. Daarom is het veel gezonder voor het lichaam om regelmatig wat beweging te hebben, hoe klein deze beweging ook is! Vandaar dat er op de markt ook bureaus worden gemaakt die je naar boven kan schuiven. Zo kan je rechtopstaand verder werken. Alles schuift dan gewoon mee naar boven! Zo kun je toch je benen even strekken terwijl je toch je bureau niet hoeft te verlaten! Dit is ook totaal niet verplicht om te gebruiken. Als je omwille van gezondheid of andere redenen niet kan of wenst te gaan staan, hoef je dit ook niet te doen! Onderstaande video is een korte demo dat aantoont hoe het kan zijn om een bureau zittend of staand te gebruiken!</p>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/l4ET3O6qzmg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading50">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag50" aria-expanded="false" aria-controls="vraag50">
+                                Vraag 50: Ik zou graag soms even willen rechtstaan terwijl ik aan het werken ben!
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag50" class="collapse" aria-labelledby="heading50" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Deze vraag heeft voornamelijk betrekking tot het hebben van kastjes en schuiven op de bureau! Op zich willen we gaan naar een clean desk principe waarbij er zo weinig mogelijk zaken nog echt op de bureau zelf liggen. Deze vraag dient dus ook zodat ik een zicht krijg op het aantal spullen die gebruikt worden.</p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
