--- a/index.html
+++ b/index.html
@@ -989,13 +989,29 @@
                     <div class="card-header" id="heading50">
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag50" aria-expanded="false" aria-controls="vraag50">
-                                Vraag 50: Ik zou graag soms even willen rechtstaan terwijl ik aan het werken ben!
+                                Vraag 50: Heb je nood aan veel persoonlijke ruimte (extra schuiven en kastjes) bij de bureau?
                             </button>
                         </h5>
                     </div>
                     <div id="vraag50" class="collapse" aria-labelledby="heading50" data-parent="#accordion">
                         <div class="card-body">
                             <p>Deze vraag heeft voornamelijk betrekking tot het hebben van kastjes en schuiven op de bureau! Op zich willen we gaan naar een clean desk principe waarbij er zo weinig mogelijk zaken nog echt op de bureau zelf liggen. Deze vraag dient dus ook zodat ik een zicht krijg op het aantal spullen die gebruikt worden.</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading51">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag51" aria-expanded="false" aria-controls="vraag51">
+                                Vraag 51: Heb je graag een houder op je bureau voor drankjes?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag51" class="collapse" aria-labelledby="heading51" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Soms kan het gewoon zijn dat het lot jou haat en besluit om die beker water te laten omver vallen op je bureau. Ondertussen heel dat toetsenbord nat, eventueel kapot zelfs, water dat van de bureau drupt op de grond,... Dit kan ook door onhandigheid zijn, maar laten we toch de schuld maar op het lot stoppen! Om dit te voorkomen, kunnen we een bekerhouder plaatsen op de bureau! Dit verlaagt de kans dat je beker of flesje de strijd verliest met de zwaartekracht en omver valt. Dit zou er zo kunnen uitzien, al heb je deze in verschillende kleuren en formaten: </p>
+                            <img src="images/bekerhouder.jpg" height="40%" width="40%">
                         </div>
                     </div>
                 </div>
