--- a/index.html
+++ b/index.html
@@ -1015,6 +1015,21 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading52">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag52" aria-expanded="false" aria-controls="vraag52">
+                                Vraag 52: Zijn er bepaalde zaken die belangrijk zijn bij een bureaustoel?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag52" class="collapse" aria-labelledby="heading52" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Mijn kennis omtrent bureaustoelen en dergelijke zijn erg beperkt. Vandaar dat ik deze vraag volledig openlaat! Zaken die je zelf belangrijk vind bij een bureaustoel kun je hier plaatsen zodat we hier rekening mee kunnen proberen te houden. Deze vraag kun je ook open laten als je hier niets speciaal wil/weet!</p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
