--- a/index.html
+++ b/index.html
@@ -1030,6 +1030,21 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading53">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag53" aria-expanded="false" aria-controls="vraag53">
+                                Vraag 53: Hebt u graag een persoonlijke lamp of gemeenschappelijk licht?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag53" class="collapse" aria-labelledby="heading53" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>In de avond kan het wel eens zeer donker worden. Vandaar dat Sir Humphrey Davy in de jaren stilletjes het elektrische licht heeft uitgevonden. Hierbij vroegen we ons af of je eerder een persoonlijk licht op de bureau verkiest of een algemeen licht in de meldkamer. Het voordeel van een persoonlijk licht is dat u zelf kiest wanneer deze aan of uit staat en (als u hiervoor kiest) de intensiteit en kleur van de lamp!</p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
