--- a/index.html
+++ b/index.html
@@ -1045,6 +1045,21 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading54">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag54" aria-expanded="false" aria-controls="vraag54">
+                                Vraag 54: Hebt u graag een lamp waarvan u de intensiteit kunt aanpassen?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag54" class="collapse" aria-labelledby="heading54" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Tegenwoordig bestaan er allerlei lampen waarbij u keuzes kunt maken in intensiteit van het licht of zelfs de kleur! Zo kan u bv. in de nacht kiezen voor een zachter licht.</p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
