--- a/index.html
+++ b/index.html
@@ -1062,6 +1062,36 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading55">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag55" aria-expanded="false" aria-controls="vraag55">
+                                Vraag 55: Hebt u nog eventuele suggesties met betrekking tot dit onderdeel?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag55" class="collapse" aria-labelledby="heading47" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Dit is een open, optionele vraag waar u nog eventuele andere suggesties of wensen kunt vermelden.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header" id="heading56">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag56" aria-expanded="false" aria-controls="vraag56">
+                                Vraag 56: Hebt u nog eventuele suggesties met betrekking tot dit onderwerp?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag56" class="collapse" aria-labelledby="heading48" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Dit is een open, optionele vraag waar u nog verduidelijking/opmerkingen kwijt kan. Als u een verduidelijking/opmerking wenst te geven over een bepaalde vraag of meerdere vragen, vergeet dan zeker het nummer van de vraag ook niet te vermelden.</p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
